# lazyrsql

./: Cargo.toml  README.md  mise.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  issue-apply-type-and-labels.yml  reopen-author-resolved-thread.yml  test.yml
docs/: architectural_characteristics.md  develop_style.md  mvp.md  product_vision.md
docs/adr/: 0001-adopt-adr-and-clarify-relationship-with-mvp.md  0002-decide-build-os.md
examples/ratatui/hello-world/: Cargo.toml  LICENSE  README.md
lint/: .gitignore  Cargo.toml  README.md  build.rs  mise.toml
lint/.cargo/: config.toml
lint/src/: lib.rs
lint/tests/: ui.rs
lint/ui/: main.rs  main.stderr
src/: main.rs
